# use-arrow-adbc

./: .gitignore  Cargo.toml  README.md  go.mod  go.sum  main.go  s
src/: dummy.rs  main.rs  snowflake_dynamic.rs  snowflake_static.rs
